--- a/www.nass.gov.ng/d5b0a44e4e0832e7bd28f122b7588587624e94a8.yml
+++ b/www.nass.gov.ng/d5b0a44e4e0832e7bd28f122b7588587624e94a8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 22:58:57 GMT
+    - Wed, 15 Aug 2018 18:04:53 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fV0MzI%2CFXrGJLE6MIxSbS1; path=/
+    - PHPSESSID=%2CbyKAgfVeBhgdnd-7Ef6a1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 22:58:57 GMT
+recorded_at: Wed, 15 Aug 2018 18:04:53 GMT
