--- a/www.nass.gov.ng/eff14cf3b60553094b99f188c549abec8fc6a073.yml
+++ b/www.nass.gov.ng/eff14cf3b60553094b99f188c549abec8fc6a073.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 23:00:13 GMT
+    - Wed, 15 Aug 2018 18:05:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mmuZmazytRBUYoCWCJyv21; path=/
+    - PHPSESSID=p%2CNsef49DUT9Qi173vSnO1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 23:00:13 GMT
+recorded_at: Wed, 15 Aug 2018 18:05:59 GMT
