--- a/www.nass.gov.ng/92484c5d38e92bb2257f00dbb946cadb8c3e3f5d.yml
+++ b/www.nass.gov.ng/92484c5d38e92bb2257f00dbb946cadb8c3e3f5d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 23:03:26 GMT
+    - Wed, 15 Aug 2018 18:09:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PTorMGXLqKvPrfDAHu-RX3; path=/
+    - PHPSESSID=-GmATui5uQPFHx39DS5%2Ct2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 23:03:26 GMT
+recorded_at: Wed, 15 Aug 2018 18:09:08 GMT
