--- a/www.nass.gov.ng/227c46fba2f402478a66cd3e848f02537db59d40.yml
+++ b/www.nass.gov.ng/227c46fba2f402478a66cd3e848f02537db59d40.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 23:07:03 GMT
+    - Wed, 15 Aug 2018 18:14:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0tYUy54fT1ECaO9s2Ntv20; path=/
+    - PHPSESSID=H9UF%2CGYUCieqlso8s1u3v2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 23:07:03 GMT
+recorded_at: Wed, 15 Aug 2018 18:14:07 GMT
