--- a/www.nass.gov.ng/be58c7a9f5f5e06079cae04efe9edea89bc83f73.yml
+++ b/www.nass.gov.ng/be58c7a9f5f5e06079cae04efe9edea89bc83f73.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 23:09:02 GMT
+    - Wed, 15 Aug 2018 18:16:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FuJnjlXSma%2CYF3XKjFszh2; path=/
+    - PHPSESSID=gK7DayiTHzX-Y%2CI%2CVVhq13; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 23:09:02 GMT
+recorded_at: Wed, 15 Aug 2018 18:16:49 GMT
