--- a/www.nass.gov.ng/a670189124727fb38d6a2456ec814c0c6d88f7dc.yml
+++ b/www.nass.gov.ng/a670189124727fb38d6a2456ec814c0c6d88f7dc.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 23:11:56 GMT
+    - Wed, 15 Aug 2018 18:20:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=F087X4oO4PnLdMH%2CzQ5DC3; path=/
+    - PHPSESSID=tBFGtcgQd87GMhKMcbh5D2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 23:11:57 GMT
+recorded_at: Wed, 15 Aug 2018 18:20:30 GMT
