--- a/www.nass.gov.ng/a0eaa1fa28e983a80322fe7b5b0fba697779128f.yml
+++ b/www.nass.gov.ng/a0eaa1fa28e983a80322fe7b5b0fba697779128f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 23:12:59 GMT
+    - Wed, 15 Aug 2018 18:21:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CcrLYCth%2ChZEyPKu5Dlo82; path=/
+    - PHPSESSID=kLoF-rTlnwVWTeGN54FCk0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 23:12:59 GMT
+recorded_at: Wed, 15 Aug 2018 18:21:55 GMT
