--- a/www.nass.gov.ng/77cba26367499c1beae4b467880b2607059c6426.yml
+++ b/www.nass.gov.ng/77cba26367499c1beae4b467880b2607059c6426.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 23:14:24 GMT
+    - Wed, 15 Aug 2018 18:22:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eAN%2ChklylzY7G9LKJqnhi0; path=/
+    - PHPSESSID=ErHd41u7k5FBd0DzvprNx2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 23:14:24 GMT
+recorded_at: Wed, 15 Aug 2018 18:22:50 GMT
