--- a/www.nass.gov.ng/273a61ff09ac63e000de6a30a1e5cda87a80dffd.yml
+++ b/www.nass.gov.ng/273a61ff09ac63e000de6a30a1e5cda87a80dffd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 01:24:22 GMT
+    - Wed, 15 Aug 2018 20:40:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mHCIP7jrIn3WYYq%2COObpL3; path=/
+    - PHPSESSID=MBYY2ME1lbiqUTAiNq-5x0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 01:24:22 GMT
+recorded_at: Wed, 15 Aug 2018 20:40:03 GMT
