--- a/www.nass.gov.ng/578e71e1a5c8fa4897fd81baf86e0eff69c5a723.yml
+++ b/www.nass.gov.ng/578e71e1a5c8fa4897fd81baf86e0eff69c5a723.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 02:01:43 GMT
+    - Wed, 15 Aug 2018 21:18:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nLAW%2CGrNBGcbxgxbATQrA3; path=/
+    - PHPSESSID=51gszASIeUxXL22d9TFcp1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 02:01:43 GMT
+recorded_at: Wed, 15 Aug 2018 21:18:47 GMT
