--- a/www.nass.gov.ng/77c86f1415671135fd4c13510074c4df96de4629.yml
+++ b/www.nass.gov.ng/77c86f1415671135fd4c13510074c4df96de4629.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 02:03:48 GMT
+    - Wed, 15 Aug 2018 21:20:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1KW-oAfGA8Q4Ozme9VkHf3; path=/
+    - PHPSESSID=lLSVGLge%2CsvbMqACFs25i0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 02:03:48 GMT
+recorded_at: Wed, 15 Aug 2018 21:20:34 GMT
