--- a/www.nass.gov.ng/3eff0ac7343306f765e31b983761e74f213745fe.yml
+++ b/www.nass.gov.ng/3eff0ac7343306f765e31b983761e74f213745fe.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 02:05:56 GMT
+    - Wed, 15 Aug 2018 21:22:41 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XniZQd%2C4aHAY0yOvzPlsc2; path=/
+    - PHPSESSID=gT3LopM86TmYyUQQGOtxs3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 02:05:56 GMT
+recorded_at: Wed, 15 Aug 2018 21:22:41 GMT
