--- a/www.nass.gov.ng/aec20e8650c1481bf51e07bbbe85c507c1e9c63e.yml
+++ b/www.nass.gov.ng/aec20e8650c1481bf51e07bbbe85c507c1e9c63e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 02:07:45 GMT
+    - Wed, 15 Aug 2018 21:25:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PNh03m7XAavZQMyI1V9BU1; path=/
+    - PHPSESSID=K0%2CXaXZZn2cW1-ehwxLbD0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 02:07:46 GMT
+recorded_at: Wed, 15 Aug 2018 21:25:20 GMT
