--- a/www.nass.gov.ng/cdc561a827b6a1a9128dce925b3eb2175ab3bb76.yml
+++ b/www.nass.gov.ng/cdc561a827b6a1a9128dce925b3eb2175ab3bb76.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 02:11:13 GMT
+    - Wed, 15 Aug 2018 21:28:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ww-qZOKbUSNAKj%2CKd9pfp2; path=/
+    - PHPSESSID=MZImdp%2CtMLN-iHHHJKYe23; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 02:11:14 GMT
+recorded_at: Wed, 15 Aug 2018 21:28:22 GMT
