--- a/www.nass.gov.ng/034ab7991d95f01161f628a13460aa100e2f5228.yml
+++ b/www.nass.gov.ng/034ab7991d95f01161f628a13460aa100e2f5228.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 02:21:24 GMT
+    - Wed, 15 Aug 2018 21:38:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0ubYUXRJAXoT6M1X0RBwD2; path=/
+    - PHPSESSID=TszKkkHq9NgQ4%2CtFpZXwq0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 02:21:25 GMT
+recorded_at: Wed, 15 Aug 2018 21:38:32 GMT
