--- a/www.nass.gov.ng/2a0a98fab92c291f3ecaa0d6108a053f584ce2e4.yml
+++ b/www.nass.gov.ng/2a0a98fab92c291f3ecaa0d6108a053f584ce2e4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 02:24:24 GMT
+    - Wed, 15 Aug 2018 21:42:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nS-Pxd3NzveQGXhViWSpz0; path=/
+    - PHPSESSID=wVsgByF7Zfv03eLfW%2CfxP3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 02:24:24 GMT
+recorded_at: Wed, 15 Aug 2018 21:42:01 GMT
