--- a/www.nass.gov.ng/e682e2f7e4ddca09ddfdc2cd18f3eae073d3f6db.yml
+++ b/www.nass.gov.ng/e682e2f7e4ddca09ddfdc2cd18f3eae073d3f6db.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 02:33:54 GMT
+    - Wed, 15 Aug 2018 21:50:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Rxb4aMjqJI89xYquJKlA50; path=/
+    - PHPSESSID=sVWLqTABTZtMzFPS%2CfUB-3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 02:33:55 GMT
+recorded_at: Wed, 15 Aug 2018 21:50:54 GMT
