--- a/www.nass.gov.ng/0dc3fab010f01bda86e21cd2d25dcb2f5e1f9534.yml
+++ b/www.nass.gov.ng/0dc3fab010f01bda86e21cd2d25dcb2f5e1f9534.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 02:42:40 GMT
+    - Wed, 15 Aug 2018 21:58:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1QZqztd5Kw21gZZRaH1wC0; path=/
+    - PHPSESSID=icu%2Cs3QdlN4hzZT3l3qEY0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 02:42:40 GMT
+recorded_at: Wed, 15 Aug 2018 21:58:05 GMT
