--- a/www.nass.gov.ng/b710172416002a833fe14b217d8a02f83402c70b.yml
+++ b/www.nass.gov.ng/b710172416002a833fe14b217d8a02f83402c70b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 13:17:38 GMT
+    - Thu, 16 Aug 2018 10:06:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Y092JM21A%2CJvE3tvt5ioX1; path=/
+    - PHPSESSID=0uT-T%2CA4VuJU8XTIBMrw10; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 15 Aug 2018 13:17:38 GMT
+recorded_at: Thu, 16 Aug 2018 10:06:32 GMT
