--- a/www.nass.gov.ng/6a468782aa6afb271767130966bd956cee44cc40.yml
+++ b/www.nass.gov.ng/6a468782aa6afb271767130966bd956cee44cc40.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 13:20:00 GMT
+    - Thu, 16 Aug 2018 10:09:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2LEQ%2CM6XQKtEsutYQYphw0; path=/
+    - PHPSESSID=%2CZmLapBUFQGXSmkZsaUsN1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 15 Aug 2018 13:20:01 GMT
+recorded_at: Thu, 16 Aug 2018 10:09:10 GMT
