--- a/www.nass.gov.ng/fd960d320e6e3fa2eb93012cd35cf5ba7f6b1a36.yml
+++ b/www.nass.gov.ng/fd960d320e6e3fa2eb93012cd35cf5ba7f6b1a36.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 13:31:30 GMT
+    - Thu, 16 Aug 2018 10:22:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FYiywsmh2sm1fzse2vqaJ1; path=/
+    - PHPSESSID=IJgcXQMi%2CL4s3c8A0ZssA0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 13:31:30 GMT
+recorded_at: Thu, 16 Aug 2018 10:22:50 GMT
