--- a/www.nass.gov.ng/8a654598411173ea33fce240819988e87adc12ab.yml
+++ b/www.nass.gov.ng/8a654598411173ea33fce240819988e87adc12ab.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 13:43:40 GMT
+    - Thu, 16 Aug 2018 10:36:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wwUtkg-apqhqNvOf%2Ck%2CXu3; path=/
+    - PHPSESSID=UsJ0uv91pKnLseEuOS2xC2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 13:43:40 GMT
+recorded_at: Thu, 16 Aug 2018 10:36:09 GMT
