--- a/www.nass.gov.ng/d8d5d6c3097332681f98d566f20164f401161499.yml
+++ b/www.nass.gov.ng/d8d5d6c3097332681f98d566f20164f401161499.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 14:17:08 GMT
+    - Thu, 16 Aug 2018 11:14:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=aPfGIyj0%2C34k3FjZ3rc1V2; path=/
+    - PHPSESSID=t2WO%2Cl-tABkMA-G9j2IWO2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 14:17:08 GMT
+recorded_at: Thu, 16 Aug 2018 11:14:22 GMT
