--- a/www.nass.gov.ng/ec5bb3bcb8148ddc47cdad5b7eaca964328f2e2e.yml
+++ b/www.nass.gov.ng/ec5bb3bcb8148ddc47cdad5b7eaca964328f2e2e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 14:24:01 GMT
+    - Thu, 16 Aug 2018 11:22:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Sf7GavwVgZs3oLBVfrAtH1; path=/
+    - PHPSESSID=%2CblcqW2wMDxiAbx3Vy5Z42; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 14:24:01 GMT
+recorded_at: Thu, 16 Aug 2018 11:22:58 GMT
