--- a/www.nass.gov.ng/dfd65a9de8f195073a282af5e1ba71ab21c45e37.yml
+++ b/www.nass.gov.ng/dfd65a9de8f195073a282af5e1ba71ab21c45e37.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 14:43:51 GMT
+    - Thu, 16 Aug 2018 11:43:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=oL-XO2%2CpgXSXfYCBPXnTd1; path=/
+    - PHPSESSID=pErv5TJcu2HNAGmchepS90; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 15 Aug 2018 14:43:51 GMT
+recorded_at: Thu, 16 Aug 2018 11:43:19 GMT
