--- a/www.nass.gov.ng/e0bc5ba842815022b2066ae42984042b871b93a2.yml
+++ b/www.nass.gov.ng/e0bc5ba842815022b2066ae42984042b871b93a2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 14:48:26 GMT
+    - Thu, 16 Aug 2018 11:48:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=KQy4OjpAVvRzwJjak8%2CdL1; path=/
+    - PHPSESSID=dTGtWMPck4jFS4C5engdv3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 14:48:29 GMT
+recorded_at: Thu, 16 Aug 2018 11:48:32 GMT
