--- a/www.nass.gov.ng/e35050c66243b61eb8173ffb969fa3d5d88cc9c9.yml
+++ b/www.nass.gov.ng/e35050c66243b61eb8173ffb969fa3d5d88cc9c9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 14:56:54 GMT
+    - Thu, 16 Aug 2018 11:58:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UwKuoc7l0VJwabgLvGnCo3; path=/
+    - PHPSESSID=H5dhwUK%2CnJhrIXsHthCSw1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 14:56:55 GMT
+recorded_at: Thu, 16 Aug 2018 11:58:31 GMT
