--- a/www.nass.gov.ng/9f482ad8a2705cfef53148d781ce821e48e4d450.yml
+++ b/www.nass.gov.ng/9f482ad8a2705cfef53148d781ce821e48e4d450.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 14:59:33 GMT
+    - Thu, 16 Aug 2018 12:01:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=USXyNpI2n4c01FsqN49j20; path=/
+    - PHPSESSID=y8om4FEKa3%2C2rHvUS9qtt1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 14:59:33 GMT
+recorded_at: Thu, 16 Aug 2018 12:01:11 GMT
